--- a/styles.scss
+++ b/styles.scss
@@ -59,7 +59,7 @@ body {
 }
 
 .why-us {
-  padding-top: 70px;
+  padding: 70px 0 12px;
   width: 1410px;
   margin: 0 auto;
   display: flex;
@@ -69,17 +69,12 @@ body {
   &__header {
     text-align: center;
     margin-bottom: 72px;
-    color: var(--color-dark-300);
-  }
-
-  &__heading {
-    font-size: 36px;
-    margin-bottom: 16px;
   }
 
   &__subheading {
     font-size: 18px;
     font-weight: 300;
+    color: var(--color-dark-300);
 
     span {
       color: var(--color-orange-200);
@@ -185,12 +180,108 @@ body {
         background-image: url("./svg/picture_as_pdf-white.svg");
       }
     }
+    span {
+      padding: 12px 16px;
+      border-right: 1px var(--color-orange-200) solid;
+      text-transform: uppercase;
+      transition: border-right 0.2s;
+    }
+  }
+}
+
+.faq {
+  position: relative;
+  padding-bottom: 96px;
+  min-height: 760px;
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1410px;
+    margin: 0 auto;
+    gap: 96px;
   }
 
-  span {
-    padding: 12px 16px;
-    border-right: 1px var(--color-orange-200) solid;
-    text-transform: uppercase;
-    transition: border-right 0.2s;
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-orange-300);
+    clip-path: polygon(0% 100%, 0% 23%, 100% 5%, 100% 100%);
+    z-index: -1;
   }
+
+  &__questions {
+    display: flex;
+    gap: 12px;
+    flex-direction: column;
+    align-self: flex-start;
+    width: 50%;
+  }
+
+  &__item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__open {
+    background-color: var(--color-white);
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    border: none;
+    cursor: pointer;
+    padding: 12px 24px;
+    border-radius: 10px;
+
+    &--icon {
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: var(--color-orange-200);
+      display: flex;
+      align-items: end;
+      justify-content: center;
+      font-size: 16px;
+      color: var(--color-white);
+      font-weight: 700;
+    }
+
+    &--text {
+      color: var(--color-orange-200);
+      font-size: 18px;
+      font-weight: 700;
+      line-height: 1;
+    }
+  }
+
+  &__content {
+    display: none;
+  }
+
+  &__text {
+  }
+
+  &__cover {
+    position: absolute;
+    bottom: 0;
+    right: 13%;
+  }
+}
+
+.heading {
+  font-size: 36px;
+  margin-bottom: 16px;
+  color: var(--color-dark-300);
+}
+
+.footer {
+  width: 100%;
+  height: 96px;
+  background-color: var(--color-dark-100);
 }
