--- a/styles.scss
+++ b/styles.scss
@@ -14,7 +14,7 @@
   --color-yellow: #fdd304;
 }
 
-// --- Reseting Styles ---
+// --- Reseting Styles && Setting Global Styles ---
 
 html {
   box-sizing: border-box;
@@ -42,6 +42,11 @@ ul {
   font-weight: normal;
 }
 
+body {
+  font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
+}
+
 ol,
 ul {
   list-style: none;
@@ -52,15 +57,11 @@ img {
   height: auto;
 }
 
-// --- Global Styles ---
-
-body {
-  font-family: "Open Sans", sans-serif;
-}
+// --- Styling Why Us Section ---
 
 .why-us {
-  padding: 70px 0 12px;
-  width: 1410px;
+  padding: 70px 16px 92px;
+  max-width: 1460px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -84,8 +85,18 @@ body {
   &__features {
     display: flex;
     justify-content: center;
-    gap: 64px;
+    gap: 54px;
     margin-bottom: 64px;
+
+    @media only screen and (max-width: 1320px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media only screen and (max-width: 720px) {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
   }
 
   &__item {
@@ -97,23 +108,41 @@ body {
     align-items: center;
     text-align: center;
     justify-content: center;
-    padding: 36px 28px;
+    padding: 36px 22px;
     transition: box-shadow 0.3s;
+    flex-shrink: 1;
 
     &:hover {
       box-shadow: 0px 0px 15px #f3922294;
+    }
+
+    @media only screen and (max-width: 1320px) {
+      &:nth-child(2)::after {
+        display: none;
+      }
+    }
+    @media only screen and (max-width: 720px) {
+      &:nth-child(2)::after {
+        display: block;
+      }
     }
 
     &:not(:last-child)::after {
       position: absolute;
       right: 0%;
       top: 50%;
-      transform: translate(42px, -50%);
+      transform: translate(37px, -50%);
       content: "";
       width: 20px;
       height: 20px;
       background-color: var(--color-orange-200);
       border-radius: 50%;
+
+      @media only screen and (max-width: 720px) {
+        top: 100%;
+        left: 50%;
+        transform: translate(-50%, 17px);
+      }
     }
   }
 
@@ -132,7 +161,10 @@ body {
     margin-bottom: 20px;
 
     span {
+      padding: 0px 12px;
       background-color: var(--color-dark-200);
+      box-decoration-break: clone;
+      -webkit-box-decoration-break: clone;
     }
   }
 
@@ -156,7 +188,7 @@ body {
 
     &::after {
       content: "";
-      background-image: url("./svg/picture_as_pdf.svg");
+      background-image: url("./svg/pdf-icon.svg");
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -171,13 +203,14 @@ body {
     &:focus {
       background-color: var(--color-orange-300);
       color: var(--color-white);
+      outline: none;
 
       span {
         border-right: 1px var(--color-white) solid;
       }
 
       &::after {
-        background-image: url("./svg/picture_as_pdf-white.svg");
+        background-image: url("./svg/pdf-icon-white.svg");
       }
     }
     span {
@@ -189,19 +222,10 @@ body {
   }
 }
 
+// --- Styling FAQ Section
+
 .faq {
   position: relative;
-  padding-bottom: 96px;
-  min-height: 760px;
-
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 1410px;
-    margin: 0 auto;
-    gap: 96px;
-  }
 
   &::after {
     content: "";
@@ -211,8 +235,35 @@ body {
     width: 100%;
     height: 100%;
     background-color: var(--color-orange-300);
-    clip-path: polygon(0% 100%, 0% 23%, 100% 5%, 100% 100%);
+    clip-path: polygon(0% 100%, 0% 20%, 100% 5%, 100% 100%);
     z-index: -1;
+
+    @media only screen and (max-width: 1360px) {
+      clip-path: polygon(0% 100%, 0% 150px, 100% 100px, 100% 100%);
+    }
+  }
+
+  &__container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 1460px;
+    margin: 0 auto;
+    padding: 0 16px;
+    gap: 108px;
+    min-height: 760px;
+    padding-bottom: 96px;
+
+    @media only screen and (max-width: 1360px) {
+      padding-bottom: 64px;
+      min-height: auto;
+    }
+
+    @media only screen and (max-width: 600px) {
+      padding-bottom: 64px;
+      min-height: auto;
+    }
   }
 
   &__questions {
@@ -221,12 +272,20 @@ body {
     flex-direction: column;
     align-self: flex-start;
     width: 50%;
+    @media only screen and (max-width: 1360px) {
+      align-self: center;
+      width: 100%;
+      max-width: 800px;
+    }
   }
 
   &__item {
     width: 100%;
     display: flex;
     flex-direction: column;
+    border: 1px solid var(--color-white);
+    border-radius: 10px;
+    overflow: hidden;
   }
 
   &__open {
@@ -239,17 +298,37 @@ body {
     padding: 12px 24px;
     border-radius: 10px;
 
+    @media only screen and (max-width: 540px) {
+      padding: 12px;
+      gap: 8px;
+    }
+
     &--icon {
+      position: relative;
+      flex-shrink: 0;
       width: 20px;
       height: 20px;
       border-radius: 50%;
       background-color: var(--color-orange-200);
       display: flex;
-      align-items: end;
+      align-items: center;
       justify-content: center;
       font-size: 16px;
       color: var(--color-white);
       font-weight: 700;
+      transition: background-image 0.2s;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      line-height: 0;
+    }
+
+    &--plus {
+      background-image: url("./svg/plus.svg");
+    }
+
+    &--minus {
+      background-image: url("./svg/minus.svg");
     }
 
     &--text {
@@ -257,27 +336,52 @@ body {
       font-size: 18px;
       font-weight: 700;
       line-height: 1;
+
+      @media only screen and (max-width: 540px) {
+        font-size: 12px;
+      }
     }
   }
 
   &__content {
-    display: none;
+    display: grid;
+    grid-template-rows: 0fr;
+    transition: grid-template-rows 0.3s;
+
+    &--open {
+      grid-template-rows: 1fr;
+    }
+  }
+
+  &__box {
+    overflow: hidden;
   }
 
   &__text {
+    font-size: 12px;
+    color: var(--color-white);
+    overflow: hidden;
+    padding: 12px 16px;
   }
 
   &__cover {
     position: absolute;
     bottom: 0;
-    right: 13%;
+    right: 2%;
+
+    @media only screen and (max-width: 1360px) {
+      display: none;
+    }
   }
 }
+
+// --- Other Styles
 
 .heading {
   font-size: 36px;
   margin-bottom: 16px;
   color: var(--color-dark-300);
+  text-align: center;
 }
 
 .footer {
