--- a/styles.scss
+++ b/styles.scss
@@ -60,12 +60,12 @@ img {
 // --- Styling Why Us Section ---
 
 .why-us {
-  padding: 70px 16px 92px;
-  max-width: 1460px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1460px;
+  margin: 0 auto;
+  padding: 70px 16px 92px;
 
   &__header {
     text-align: center;
@@ -73,8 +73,8 @@ img {
   }
 
   &__subheading {
-    font-size: 18px;
     font-weight: 300;
+    font-size: 18px;
     color: var(--color-dark-300);
 
     span {
@@ -101,16 +101,16 @@ img {
 
   &__item {
     position: relative;
-    border-radius: 10px;
-    box-shadow: 0px 0px 15px #00000026;
     display: flex;
+    flex-shrink: 1;
     flex-direction: column;
     align-items: center;
-    text-align: center;
     justify-content: center;
     padding: 36px 22px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px #00000026;
+    text-align: center;
     transition: box-shadow 0.3s;
-    flex-shrink: 1;
 
     &:hover {
       box-shadow: 0px 0px 15px #f3922294;
@@ -128,15 +128,15 @@ img {
     }
 
     &:not(:last-child)::after {
-      position: absolute;
-      right: 0%;
-      top: 50%;
-      transform: translate(37px, -50%);
       content: "";
+      position: absolute;
+      top: 50%;
+      right: 0%;
       width: 20px;
       height: 20px;
-      background-color: var(--color-orange-200);
       border-radius: 50%;
+      background-color: var(--color-orange-200);
+      transform: translate(37px, -50%);
 
       @media only screen and (max-width: 720px) {
         top: 100%;
@@ -147,18 +147,18 @@ img {
   }
 
   &__icon {
-    flex: 1;
     display: flex;
+    flex: 1;
     align-items: center;
     justify-content: center;
     padding: 14px 0 28px;
   }
 
   &__item-heading {
+    margin-bottom: 20px;
+    font-weight: 300;
     font-size: 24px;
     color: var(--color-white);
-    font-weight: 300;
-    margin-bottom: 20px;
 
     span {
       padding: 0px 12px;
@@ -169,41 +169,41 @@ img {
   }
 
   &__description {
-    font-size: 12px;
     font-weight: 300;
+    font-size: 12px;
     color: var(--color-dark-300);
   }
 
   &__button {
-    font-size: 16px;
-    color: var(--color-orange-200);
-    background-color: transparent;
+    display: flex;
+    align-items: center;
     padding: 4px;
     border: 3px solid var(--color-orange-300);
     border-radius: 10px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
+    background-color: transparent;
+    font-size: 16px;
+    color: var(--color-orange-200);
     transition: all 0.2s;
+    cursor: pointer;
 
     &::after {
       content: "";
-      background-image: url("./svg/pdf-icon.svg");
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
       display: block;
       width: 38px;
       height: 38px;
       margin: 4px 6px;
+      background-image: url("./svg/pdf-icon.svg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
       transition: background-image 0.3s;
     }
 
     &:hover,
     &:focus {
+      outline: none;
       background-color: var(--color-orange-300);
       color: var(--color-white);
-      outline: none;
 
       span {
         border-right: 1px var(--color-white) solid;
@@ -232,11 +232,11 @@ img {
     position: absolute;
     bottom: 0;
     left: 0;
+    z-index: -1;
     width: 100%;
     height: 100%;
     background-color: var(--color-orange-300);
     clip-path: polygon(0% 100%, 0% 20%, 100% 5%, 100% 100%);
-    z-index: -1;
 
     @media only screen and (max-width: 1360px) {
       clip-path: polygon(0% 100%, 0% 150px, 100% 100px, 100% 100%);
@@ -248,12 +248,11 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 1460px;
-    margin: 0 auto;
-    padding: 0 16px;
     gap: 108px;
+    max-width: 1460px;
     min-height: 760px;
-    padding-bottom: 96px;
+    margin: 0 auto;
+    padding: 0 16px 96px;
 
     @media only screen and (max-width: 1360px) {
       padding-bottom: 64px;
@@ -280,47 +279,43 @@ img {
   }
 
   &__item {
-    width: 100%;
     display: flex;
     flex-direction: column;
+    width: 100%;
     border: 1px solid var(--color-white);
     border-radius: 10px;
     overflow: hidden;
   }
 
   &__open {
-    background-color: var(--color-white);
     display: flex;
     align-items: center;
     gap: 16px;
-    border: none;
-    cursor: pointer;
     padding: 12px 24px;
+    border: none;
     border-radius: 10px;
+    background-color: var(--color-white);
+    cursor: pointer;
 
     @media only screen and (max-width: 540px) {
-      padding: 12px;
       gap: 8px;
+      padding: 12px;
     }
 
     &--icon {
       position: relative;
-      flex-shrink: 0;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      background-color: var(--color-orange-200);
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 16px;
-      color: var(--color-white);
-      font-weight: 700;
-      transition: background-image 0.2s;
+      flex-shrink: 0;
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      background-color: var(--color-orange-200);
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
-      line-height: 0;
+      transition: background-image 0.2s;
     }
 
     &--plus {
@@ -332,9 +327,9 @@ img {
     }
 
     &--text {
-      color: var(--color-orange-200);
-      font-size: 18px;
       font-weight: 700;
+      font-size: 18px;
+      color: var(--color-orange-200);
       line-height: 1;
 
       @media only screen and (max-width: 540px) {
@@ -358,10 +353,10 @@ img {
   }
 
   &__text {
+    padding: 12px 16px;
     font-size: 12px;
     color: var(--color-white);
     overflow: hidden;
-    padding: 12px 16px;
   }
 
   &__cover {
@@ -378,8 +373,8 @@ img {
 // --- Other Styles
 
 .heading {
-  font-size: 36px;
   margin-bottom: 16px;
+  font-size: 36px;
   color: var(--color-dark-300);
   text-align: center;
 }
